--- a/web/404.html
+++ b/web/404.html
@@ -2,7 +2,7 @@
 <html lang='IT'>
 <head>
     <title>404</title>
-    <meta http-equiv='refresh' content='0; URL=http://mytomes.vercel.app/#/404'>
+    <meta content='0; URL=http://mytomes.vercel.app/#/404' http-equiv='refresh'>
 </head>
 <body>
 404 NOT FOUND
